--- a/static/spinner.css
+++ b/static/spinner.css
@@ -24,7 +24,7 @@
   border-radius: 50%;
   background: repeating-conic-gradient(#fff 0 20deg, #2e09b1 120deg 50deg);
 
-  mask-image: radial-gradient(circle at center 100%, rgba(0, 0, 0, 0) 22%, black 23%);
+  mask-image: radial-gradient(circle/* at center 100%*/, rgba(0, 0, 0, 0) 45%, black 42%);
   mask-repeat: no-repeat;
   mask-position: center;
   mask-size: contain;
@@ -38,10 +38,11 @@
   left: 36%;
   width: 27%;
   height: 27%;
-  background: repeating-conic-gradient(#000000 0 15deg,#fff  71deg 30deg);
+  background: repeating-conic-gradient(#000000 0 15deg, #fff 71deg 30deg);
   border-radius: 50%;
   z-index: 10;
   animation: indentedAnimation 2s linear 0s infinite reverse;
+  box-shadow: 0 0 0 2px white;
 }
 
 @keyframes indentedAnimation {
